# voicebot

./: Dockerfile  docker-compose.yml  pyproject.toml
backend/: api_server.py
frontend/: web_app.py
tests/: test_api_server.py  test_keywords.py
